# learn-cuda

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  distance.cu  main.cu  matrix-transposition.cu  saxpy-unified.cu  saxpy.cu
docs/: aos-soa.md  distance-matrix.md  prep.md  profiling-unified-memory.md  streams.md
learn/: 01-add-vectors.cu  01_hello.cu  02-query-devices.cu  02_vectoradd.cu  README.md  saxpy.cu
scratch/: matrix_mul.cu  reduction.cu  stream_example.cu  unified_memory.cu  vector_add.cu
src/: 01-add-vectors.cu  02-query-devices.cu  03-global-memory.cu  05-matrix-transposition.cu
